# multicrew

./: AI in Democracyblog.md  Agentic AI in 2025blog.md  Agentic AI in Health Careblog.md  Education system in Pakistan needs reforms at every levelblog.md  layout.tldr  pyproject.toml
src/multicrew/: __init__.py
src/multicrew/crews/blog_layout_crew/: BlogLayoutCrew.py
src/multicrew/crews/blog_layout_crew/config/: agents.yaml  tasks.yaml
src/multicrew/crews/blog_writer_crew/: BlogWriterCrew.py
src/multicrew/crews/blog_writer_crew/config/: agents.yaml  tasks.yaml
