[project]
name = "multicrew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
multicrew = "multicrew:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
